--- a/openApiDocs/beta/DeviceManagement.yml
+++ b/openApiDocs/beta/DeviceManagement.yml
@@ -7088,7 +7088,7 @@ paths:
       tags:
         - deviceManagement.deviceManagementCompliancePolicy
       summary: Get settingDefinitions from deviceManagement
-      description: List of related Setting Definitions. This property is read-only.
+      description: List of related Setting Definitions
       operationId: deviceManagement.compliancePolicies.settings_ListSettingDefinitions
       parameters:
         - name: deviceManagementCompliancePolicy-id
@@ -7217,7 +7217,7 @@ paths:
       tags:
         - deviceManagement.deviceManagementCompliancePolicy
       summary: Get settingDefinitions from deviceManagement
-      description: List of related Setting Definitions. This property is read-only.
+      description: List of related Setting Definitions
       operationId: deviceManagement.compliancePolicies.settings_GetSettingDefinitions
       parameters:
         - name: deviceManagementCompliancePolicy-id
@@ -8283,7 +8283,7 @@ paths:
       tags:
         - deviceManagement.deviceManagementConfigurationPolicy
       summary: Get settingDefinitions from deviceManagement
-      description: List of related Setting Definitions. This property is read-only.
+      description: List of related Setting Definitions
       operationId: deviceManagement.configurationPolicies.settings_ListSettingDefinitions
       parameters:
         - name: deviceManagementConfigurationPolicy-id
@@ -8412,7 +8412,7 @@ paths:
       tags:
         - deviceManagement.deviceManagementConfigurationPolicy
       summary: Get settingDefinitions from deviceManagement
-      description: List of related Setting Definitions. This property is read-only.
+      description: List of related Setting Definitions
       operationId: deviceManagement.configurationPolicies.settings_GetSettingDefinitions
       parameters:
         - name: deviceManagementConfigurationPolicy-id
@@ -48492,7 +48492,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.deviceManagementConfigurationSettingDefinition'
-              description: List of related Setting Definitions. This property is read-only.
+              description: List of related Setting Definitions
               x-ms-navigationProperty: true
           additionalProperties:
             type: object
@@ -78054,7 +78054,7 @@ components:
           properties:
             description:
               type: string
-              description: Tag description as it will appear to the user in Microsoft Teams.
+              description: Tag description as it will appear to the user in Microsoft Teams. A teamworkTag can't have more than 200 teamworkTagMembers.
               nullable: true
             displayName:
               type: string
@@ -78834,11 +78834,11 @@ components:
       properties:
         key:
           type: string
-          description: 'Contains the name of the field that a value is associated with. When a sign in or domain hint is included in the sign-in request, corresponding fields are included as key-value pairs. Possible keys: Login hint present, Domain hint present.'
+          description: Key.
           nullable: true
         value:
           type: string
-          description: Contains the corresponding value for the specified key. The value is true if a sign in hint was included in the sign-in request; otherwise false. The value is true if a domain hint was included in the sign-in request; otherwise false.
+          description: Value.
           nullable: true
       additionalProperties:
         type: object
